# OpenWRTCompilerServer

./: .gitignore  CMakeLists.txt  README.md  client.cpp  server.cpp  unix.c
client/: CMakeLists.txt  Makefile  client.c  client.cpp
server/: CMakeLists.txt  Makefile  server.c  server.cpp
